fixed textoverflow at stepbystep page

--- a/include/css/stepByStep.css
+++ b/include/css/stepByStep.css
@@ -83,7 +83,7 @@
 }
 
 #wrapper article div.stepByStepHeadline {
-    width: 100%;
+    width: 90%;
     padding-left: 1em;
     padding-top: 1em;
     font-size: 1.5em;
@@ -115,6 +115,7 @@
 #wrapper article div.stepByStepDescription {
   margin-bottom: 0.5em;
   margin-top: 2em;
+  width: 90%;
 }
 
 #wrapper article div.stepByStepDetailContainerLeft {
@@ -128,14 +129,22 @@
   font-size: 0.8em;
 }
 
+#wrapper article div.stepByStepDescriptionContainer {
+  width: 60%;
+  float: left;
+  height: 92px;
+  line-height: 92px;
+}
+
 #wrapper article div.stepByStepDescription1 {
-  margin-bottom: 0.5em;  
-  display: table-cell; 
+  
+  display: inline-block;
   vertical-align: middle;
+  line-height: 18px;
 }
 
 #wrapper article div.stepByStepTableView {
-  display: table;
+  width: 100%;
 }
 
 #wrapper article div.miniThumb {
